# PyQt-Sudoku

./: README.md  pyproject.toml  ruff.toml
src/pyqt_sudoku/: __init__.py  _version.py  solver.py  sudoku_app.py  sudoku_main_win.py  sudoku_main_win.ui
