[project]
name = "pyqt-sudoku"
authors = [
    { name = "Jaime Gonzalez Gomez", email = "jaimenicolas.gonzalezg@gmail.com" },
]
description = "Sudoku application designed with PyQt6"
dependencies = [
    "PyQt6",
    "numpy>=2",
    "py-sudoku",
]
requires-python = ">=3.8"
license = { text = "MIT license" }
dynamic = ["readme", "version"]
classifiers = [
    "Programming Language :: Python :: 3.8+",
]

[project.urls]
Homepage = "https://github.com/Jtachan/PyQt-Sudoku.git"
Documentation = "https://readthedocs.org"

[project.scripts]
QSudokuApp = "pyqt_sudoku.sudoku_app:launch_app"

[project.optional-dependencies]
dev = ["ruff", "pytest", "mkdocs-material"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "pyqt_sudoku._version.__version__" }
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools.packages.find]
where = ["src"]
